wip cot parsing

--- a/notebooks/cot_parsing_dev.ipynb
+++ b/notebooks/cot_parsing_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,11 @@
     "import mistune.renderers.markdown\n",
     "from collections import defaultdict\n",
     "from typing import Literal\n",
-    "from datasets import load_dataset"
+    "from datasets import load_dataset\n",
+    "from typing import List\n",
+    "import re\n",
+    "from openai.types.chat.chat_completion_message_param import ChatCompletionMessageParam\n",
+    "from typing import Sequence"
    ]
   },
   {
@@ -184,8 +188,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openai.types.chat.chat_completion_message_param import ChatCompletionMessageParam\n",
-    "from typing import Sequence\n",
     "\n",
     "\n",
     "def format_codecontests_row_sft(row: dict) -> Sequence[ChatCompletionMessageParam]:\n",
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,21 +251,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "77685it [00:12, 6329.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {'no_code_block': 46225, 'no_output_or_thought': 52005, 'multiple_outputs': 2884, 'chinese_found': 6706, 'no_thought': 40})\n"
+     ]
+    }
+   ],
    "source": [
-    "from typing import List\n",
-    "import re\n",
-    "\n",
     "def extract_code_block(msg: str) -> List[str]:\n",
     "    match_pattern = r\"```(\\w+)?\\n(.*?)```\"\n",
     "    blocks = re.findall(match_pattern, msg, re.DOTALL)\n",
-    "    \n",
+    "\n",
     "    if len(blocks) > 0:\n",
     "        blocks = [block[1] for block in blocks]\n",
     "\n",
     "    return blocks\n",
+    "\n",
     "\n",
     "def _get_all_within_tag(tag_content: str, text: str) -> str:\n",
     "    pattern = rf\"<{tag_content}>(.*?)</{tag_content}>\"\n",
@@ -274,15 +289,13 @@
     "        return results[-1]\n",
     "    return results[0]\n",
     "\n",
+    "\n",
     "def format_o1_row(problem, thoughts, code) -> Sequence[ChatCompletionMessageParam]:\n",
     "    thoughts_list = [f\"<thought>{t}</thought>\" for t in thoughts]\n",
     "    thoughts_str = \"\\n\".join(thoughts_list)\n",
     "    code_str = f\"<solution>{code}</solution>\"\n",
     "    conv: Sequence[ChatCompletionMessageParam] = [\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": problem\n",
-    "        },\n",
+    "        {\"role\": \"user\", \"content\": problem},\n",
     "        {\n",
     "            \"role\": \"assistant\",\n",
     "            \"content\": f\"{thoughts_str}\\n\\n{code_str}\",\n",
@@ -293,20 +306,38 @@
     "\n",
     "rows_out = []\n",
     "\n",
+    "\n",
+    "def _check_chinese(text: bytes) -> bool:\n",
+    "    results = re.findall(r\"[\\u4e00-\\u9fff]+\", text.decode(\"utf-8\"))\n",
+    "    return len(results) > 0\n",
+    "\n",
+    "\n",
+    "stats = defaultdict(int)\n",
+    "\n",
     "for i, row in tqdm(enumerate(openo1_sft)):\n",
-    "    output = row['output'] # type: ignore\n",
+    "    output = row[\"output\"]  # type: ignore\n",
     "    if \"```\" not in output:\n",
+    "        stats[\"no_code_block\"] += 1\n",
+    "    problem = row[\"instruction\"]  # type: ignore\n",
+    "    if _check_chinese(problem.encode(\"utf-8\")) or _check_chinese(\n",
+    "        output.encode(\"utf-8\")\n",
+    "    ):\n",
+    "        stats[\"chinese_found\"] += 1\n",
     "        continue\n",
-    "    problem = row['instruction'] # type: ignore\n",
+    "\n",
     "    thought = _get_all_within_tag(\"Thought\", output).split(\"\\n\\n\")\n",
     "    output = _get_all_within_tag(\"Output\", output)\n",
     "    output = extract_code_block(output)\n",
+    "\n",
     "    thought = [t.strip() for t in thought if t != \"\"]\n",
-    "    if len(output) == 0 or len(thought) == 0:\n",
-    "        print(\"warn: no output or thought\")\n",
+    "    if len(output) == 0:\n",
+    "        stats[\"no_output_or_thought\"] += 1\n",
+    "        continue\n",
+    "    elif len(thought) == 0:\n",
+    "        stats[\"no_thought\"] += 1\n",
     "        continue\n",
     "    if len(output) > 1:\n",
-    "        print(\"warn: multiple outputs\")\n",
+    "        stats[\"multiple_outputs\"] += 1\n",
     "        continue\n",
     "    output = output[0]\n",
     "    row = format_o1_row(problem, thought, output)\n",
@@ -318,15 +349,28 @@
     "        }\n",
     "    )\n",
     "\n",
-    "out_rows_pl = pl.DataFrame(rows_out)"
+    "out_rows_pl = pl.DataFrame(rows_out)\n",
+    "print(stats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16050, 3)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\n",
     "out_rows_pl.write_parquet(\"openo1_sft_formatted_thoughts_conversations.parquet\")"
    ]
   }
@@ -347,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
