--- a/notebooks/script_parsing_dev.ipynb
+++ b/notebooks/script_parsing_dev.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/brianfitzgerald/smolmodels/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import polars as pl\n",
     "import os\n",
@@ -12,7 +21,18 @@
     "import chardet\n",
     "import re\n",
     "from dataclasses import dataclass\n",
-    "from typing import List, Optional"
+    "from typing import List, Optional\n",
+    "import kagglehub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kagglehub.dataset_download(\"prasad22/the-internet-movie-script-dataset\")\n",
+    "path = kagglehub.dataset_download(\"gufukuro/movie-scripts-corpus\")"
    ]
   },
   {
