wip - conversation dpo module

--- a/notebooks/cot_parsing_dev.ipynb
+++ b/notebooks/cot_parsing_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DPO\n",
+    "\n",
+    "dpo_dataset = load_dataset(\"jondurbin/py-dpo-v0.1\")['train']\n",
+    "dpo_dataset_pl = dpo_dataset.to_polars()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -416,25 +428,14 @@
        "└────────────────────────┴────────────────────────┴────────────────────────┴───────────────────────┘"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# DPO\n",
-    "\n",
-    "# dpo_dataset = load_dataset(\"jondurbin/py-dpo-v0.1\")['train']\n",
-    "# dpo_dataset = dpo_dataset['train']\n",
-    "dpo_dataset_pl = dpo_dataset.to_polars()"
+    "dpo_dataset_pl"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
