--- a/notebooks/dpo_trainer_dev.ipynb
+++ b/notebooks/dpo_trainer_dev.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/smolmodels/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import sys\n",
@@ -27,17 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-01-21 14:33:18.385\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m212\u001b[0m - \u001b[1mAdding special tokens: ['<thought>', '</thought>', '<solution>', '</solution>']\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cfg = PLAYWRIGHT_CONFIG\n",
     "cfg.notebook_mode = True\n",
@@ -49,87 +32,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'playwright_summary_to_script'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cfg.data_module_choice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-01-21 14:34:46.894\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m230\u001b[0m - \u001b[1mLoading model HuggingFaceTB/SmolLM2-135M-Instruct with attn_impl: flash_attention_2\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "wrapper.init_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'sft'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wrapper.config.tuning_mode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-01-21 14:51:47.703\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m115\u001b[0m - \u001b[1mCache dir: ../dataset_caches/playwright_summary_to_script\u001b[0m\n",
-      "\u001b[32m2025-01-21 14:51:47.704\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36msetup\u001b[0m:\u001b[36m156\u001b[0m - \u001b[1mLoading dataset for stage fit\u001b[0m\n",
-      "\u001b[32m2025-01-21 14:51:47.705\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36msetup\u001b[0m:\u001b[36m159\u001b[0m - \u001b[1mProcessing dataset for stage fit, workers: 1, cache dir ../dataset_caches/playwright_summary_to_script, using cache: False\u001b[0m\n",
-      "\u001b[32m2025-01-21 14:51:47.705\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36minit_dataset\u001b[0m:\u001b[36m131\u001b[0m - \u001b[1mLoading local dataset from ../screenplay_scenes_summarized.parquet\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-01-21 14:51:47.733\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36minit_dataset\u001b[0m:\u001b[36m151\u001b[0m - \u001b[1mLoading custom chat template: ../chat_templates/ministral_8b.jinja\u001b[0m\n",
-      "\u001b[32m2025-01-21 14:51:47.734\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.utils\u001b[0m:\u001b[36msetup\u001b[0m:\u001b[36m167\u001b[0m - \u001b[1mTrain dataset size: 9604 Val dataset size: 1068\u001b[0m\n",
-      "Map: 100%|██████████| 9604/9604 [1:30:16<00:00,  1.77 examples/s]   \n",
-      "Map: 100%|██████████| 1068/1068 [00:00<00:00, 71137.31 examples/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "wrapper.init_data_module()"
    ]
   },
   {
@@ -138,13 +43,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tokenizer dev\n",
-    "first_batch = wrapper.data_module.train_dataset[0]\n",
-    "tokenized = wrapper.data_module._tokenize_conversation(first_batch['conversation'])\n",
-    "for k in tokenized.keys():\n",
-    "    tokenized[k] = torch.as_tensor(tokenized[k], dtype=torch.long)\n",
-    "print(tokenized['labels'].tolist())\n",
-    "wrapper.data_module.visualize_sample(tokenized)"
+    "wrapper.init_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrapper.init_data_module()"
    ]
   },
   {
@@ -156,16 +64,28 @@
     "# mock_labels = first_batch[\"labels\"].clone().detach()\n",
     "# mock_labels = torch.where(mock_labels == -100, wrapper.data_module.tokenizer.pad_token_id, mock_labels)\n",
     "# mock_ids = first_batch[\"input_ids\"].clone().detach()\n",
-    "for batch in wrapper.data_module.val_dataloader():\n",
-    "    print(batch[\"input_ids\"].shape)\n",
-    "    print(batch[\"labels\"].shape)"
+    "for batch in wrapper.data_module.train_dataloader():\n",
+    "    print(batch.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-01-22 02:09:35.294\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m290\u001b[0m - \u001b[1mSaving output to: ./runs/01-22-2-9-207992-smollm2-135m-instruct\u001b[0m\n",
+      "\u001b[32m2025-01-22 02:09:35.296\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m315\u001b[0m - \u001b[1mInitializing trainer, run_name: 01-22-2-9-207992-smollm2-135m-instruct, wandb project: playwright\u001b[0m\n",
+      "\u001b[32m2025-01-22 02:09:35.296\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m318\u001b[0m - \u001b[1mlogprobs cache location: ../dataset_caches/playwright_summary_to_script/b68b303b/ref_logprobs_cache peft config: False\u001b[0m\n",
+      "\u001b[32m2025-01-22 02:09:35.296\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m321\u001b[0m - \u001b[1mWrapperConfig(model_id_or_path='HuggingFaceTB/SmolLM2-135M-Instruct', notebook_mode=True, max_sequence_length=1512, max_prompt_length=1024, max_eval_sample_length=1024, max_samples=None, train_batch_size=4, eval_batch_size=2, gradient_accumulation_steps=1, gradient_checkpointing=True, root_dir=None, data_module_choice='playwright_summary_to_script', wandb_project_name='playwright', n_epochs=1, max_eval_dataset_size=None, train_on_inputs=True, adapter_path=None, dpo_beta=0.1, learning_rate=1e-05, max_grad_norm=0.3, lora_rank=256, lora_dropout=0.05, lora_alpha=128, logprob_precompute_batch_size=16, tuning_mode='sft', eval_data_mode='random', eval_steps=500, save_steps=1000, using_mistral=True, run_suffix=None, special_tokens=['<summary>', '<scene>'], input_dataset_path='screenplay_scenes_summarized.parquet', custom_chat_template='ministral_8b', lr_scheduler=<SchedulerType.CONSTANT: 'constant'>, neftune_noise_alpha=None)\u001b[0m\n",
+      "/home/ubuntu/smolmodels/notebooks/../trl_wrapper/trainer_wrapper.py:357: FutureWarning: `tokenizer` is deprecated and removed starting from version 0.16.0 for `SFTTrainer.__init__`. Use `processing_class` instead.\n",
+      "  self.trainer = SFTTrainer(\n"
+     ]
+    }
+   ],
    "source": [
     "wrapper.init_trainer()"
    ]
@@ -183,7 +103,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-01-22 02:09:37.784\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36mtrain\u001b[0m:\u001b[36m460\u001b[0m - \u001b[1mStarting training.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='None' max='2401' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      None\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='68' max='534' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 68/534 00:05 < 00:37, 12.48 it/s]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "wrapper.train()"
    ]
