--- a/notebooks/script_parsing_dev.ipynb
+++ b/notebooks/script_parsing_dev.ipynb
@@ -14,6 +14,7 @@
     "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "sys.path.append('..')\n",
     "from synthetic_data.screenplay_parser import ScreenplayParser\n",
@@ -47,33 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1282it [00:07, 165.41it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to parse 380 scripts\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "\n",
     "scene_counts, char_line_counts = [], []\n",
     "i, n_failed = 0, 0\n",
@@ -85,7 +63,7 @@
     "    n_chars, n_chars_with_lines = len(scenes), len(parser.character_line_counts)\n",
     "    scene_counts.append(n_chars)\n",
     "    char_line_counts.append(n_chars_with_lines)\n",
-    "    if n_chars_with_lines >= 11 or n_chars >= 39:\n",
+    "    if n_chars_with_lines >= 10 and n_chars >= 30:\n",
     "        good_scripts.append(parser)\n",
     "    if n_chars_with_lines == 0 and n_chars == 0:\n",
     "        # print(row['Script'])\n",
@@ -100,7 +78,7 @@
     "    #                 raise ValueError(\"Dialogue element has no dialogue data\")\n",
     "    #             display(Markdown(f\"**{elem.dialogue_data.character}**: {elem.dialogue_data.content}\"))\n",
     "\n",
-    "print(f\"Failed to parse {n_failed} scripts\")"
+    "print(f\"Failed to parse {n_failed} scripts, got {len(good_scripts)} good scripts\")"
    ]
   },
   {
@@ -109,7 +87,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
     "\n",
     "scene_counts_np = pl.Series(\"char_counts\", scene_counts).to_numpy()\n",
     "char_line_counts_np = pl.Series(\"char_line_counts\", char_line_counts).to_numpy()\n",
@@ -157,6 +134,40 @@
     "plt.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "90852it [00:00, 659087.92it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai.types.chat.chat_completion_message_param import ChatCompletionMessageParam\n",
+    "summarized_scenes = pl.read_parquet(\"../screenplay_scenes_summarized_full.parquet\")\n",
+    "formatted_samples = []\n",
+    "for sample in tqdm(summarized_scenes.iter_rows(named=True)):\n",
+    "    scene: str = sample['scene']\n",
+    "    summary: str = sample['summary']\n",
+    "    name: str = sample['name']\n",
+    "    if len(scene.split(\"\\n\")) < 10:\n",
+    "        continue\n",
+    "    conversation: list[ChatCompletionMessageParam] = [\n",
+    "        {\"role\": \"system\", \"content\": \"You are an expert AI screenwriter. Your task is to take a user provided summary of a scene and generate a screenplay scene based on it.\"},\n",
+    "        {\"role\": \"user\", \"content\": f\"<summary>{summary}</summary>\"},\n",
+    "        {\"role\": \"assistant\", \"content\": f\"<scene>{scene}</scene>\"},\n",
+    "    ]\n",
+    "    formatted_samples.append({\"conversation\" : conversation, \"name\": name})\n",
+    "\n",
+    "formatted_samples_pqt = pl.DataFrame(formatted_samples)\n",
+    "formatted_samples_pqt.write_parquet(\"screenplay_scenes_chat_fomrat.parquet\")"
    ]
   }
  ],
